--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,6 +1,6 @@
 <%- include("./partials/header") %>
 
-    <form class="form-horizontal bg-light col-sm-4 m-4 border" action="sign_in" method="POST">
+    <form class="form-horizontal bg-light col-sm-4 m-4 border" action="/sign_in" method="POST">
       <div class="form-group mb-2 mt-2">
         <label class="ml-2" for="username">Username</label>
         <input type="text" class="form-control" name="username" id="username" placeholder="username" />
