Ready to submit
Should have most if not all main tasks completed

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,7 +35,7 @@
           </div>
         <% } else { %>
           <li class="nav-item p-1">
-            <button type=submit class="btn info" onclick="window.location.href='/sign_in'">Sign In</button>
+            <button type=submit class="btn btn-primary" onclick="window.location.href='/sign_in'">Sign In</button>
           </li>
         <% } %>
       </ul>
