--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,8 +1,11 @@
 <%- include("./partials/header") %>
 
+  <div align="center">
     <form class="form-horizontal bg-light col-sm-4 m-4 border" action="/sign_in" method="POST">
       <div class="form-group mb-2 mt-2">
-        <label class="ml-2" for="username">Username</label>
+        <div align="left">
+          <label class="ml-2" for="username">Username</label>
+        </div>
         <input type="text" class="form-control" name="username" id="username" placeholder="username" />
       </div>
 
@@ -10,5 +13,6 @@
         <button type="submit" class="btn btn-outline-secondary btn-block">Sign In</button>
       </div>
     </form>
+  </div>
 
 <%- include("./partials/footer") %>
