--- a/views/posting.ejs
+++ b/views/posting.ejs
@@ -1,7 +1,7 @@
 <%- include("./partials/header") %>
 
   <div align="center">
-    <form class="form-horizontal bg-light col-sm-4 m-4 border" action="/post" method="POST">
+    <form autocomplete="off" class="form-horizontal bg-light col-sm-4 m-4 border" action="/post" method="POST">
       <br/>
       <div class="form-group">
         <textarea class="form-control" name="content" rows="3" placeholder="What's on your mind?"></textarea>
