--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,7 +1,7 @@
 <%- include("./partials/header") %>
 
   <div align="center">
-    <form class="form-horizontal bg-light col-sm-4 m-4 border" action="/sign_in" method="POST">
+    <form autocomplete="off" class="form-horizontal bg-light col-sm-4 m-4 border" action="/sign_in" method="POST">
       <div class="form-group mb-2 mt-2">
         <div align="left">
           <label class="ml-2" for="username">Username</label>
